Fixed vertical scrollbar being displayed when the wait indicator is visible

--- a/css/wait.less
+++ b/css/wait.less
@@ -4,6 +4,11 @@
         width: 100%;
         height: 100%;
         z-index: 1200;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
     }
 
     .wait-overlay {
